--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
       retries: 5
 
   # Микросервис Trials
-  trials-service:
+  trials_service:
     build:
       context: .
       dockerfile: Dockerfile
