Fix sort creation integration with Patents Service
- Fix HTTP 201 status code handling in patents_integration.py
- Add proper code field mapping in SortRecordSerializer (code -> public_code)
- Fix originators handling in SortRecordViewSet
- Add detailed logging for debugging Patents Service integration
- Update .gitignore to exclude local env files

Resolves issues with sort creation not saving properly in Patents Service

--- a/.gitignore
+++ b/.gitignore
@@ -103,12 +103,19 @@ celerybeat.pid
 
 # Environments
 .env
+.env*
 .venv
 env/
 venv/
 ENV/
 env.bak/
 venv.bak/
+
+# Local development files
+.env dev
+.env.local
+.env.development
+.env.production
 
 # Spyder project settings
 .spyderproject
